[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
/(
  | dbx/templates/projects
  | build
  | .venv
  | out
)/

'''

[tool.pytest.ini_options]
addopts = "-s -p no:warnings --timeout=3600 --ignore-glob='dbx/templates/*'"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "[pytest][%(asctime)s][%(levelname)s][%(module)s][%(funcName)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"

[tool.poetry]
name = "dbx"
version = "0.6.4"
description = ""
authors = ["Javier Matias-Cabrera <jmatias@thoughtworks.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
databricks-cli = ">=0.16.4"
click = ">=7.1.2"
retry = ">=0.9.2"
requests = ">=2.24.0"
mlflow = ">=1.23.0"
tqdm = ">=4.50.0"
azure-identity = ">=1.7.1"
azure-mgmt-datafactory = ">=2.2.0"
azure-mgmt-subscription = ">=3.0.0"
'ruamel.yaml' = ">=0.17"
cryptography = ">=3.3.1<=38.0"
emoji = ">=1.6.1"
cookiecutter = ">=1.7.2"
Jinja2 = ">=2.11"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-timeout = "^2.1.0"
pytest-clarity = "^1.0.1"
setuptools = "^62.2.0"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "2021.3.14"
sphinx-click = "^4.0.3"
sphinx-tabs = "^3.3.1"
cookiecutter = "^1.7.3"
rst2pdf = "0.99"
wheel = "^0.37.1"
path = ">=15.0.0"

pandas = "^1.4.2"
GitPython = "^3.1.27"
rstcheck = "^5.0.0"
prospector = ">=1.3.1,<1.7.0"
MarkupSafe = ">=2.0.0rc2"
pydash = ">=5.0.2"
black = "^22.3.0"
twine = "^4"
tqdm = "^4.64.0"
click = ">=7.1.2"
artifacts-keyring = "^0.3.2"
azure-devops-artifacts-helpers = "^1.0.10"
keyring = "^23.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

markers = [
  "disable_auto_execute_mock"
]
